# WinBrush

./: CMakeLists.txt  CMakePresets.json  draw.cpp  paint.code-workspace
include/: File.h  UI.h  canvas.h  controls.h  draw.h  windowProc.h
src/: File.cpp  UI.cpp  canvas.cpp  controls.cpp  draw.cpp  main.cpp  windowProc.cpp
